[package]
name = "raugeas_sys"
version = "1.0.0"
authors = ["panicbit <panicbit.dev@gmail.com>", "Alexis Mousset <alexis.mousset@rudder.io>"]
description = "Low level bindings for augeas"
license = "MIT"
keywords = ["augeas", "bindings"]
repository = "https://github.com/normation/raugeas"
edition = "2024"
rust-version = "1.89"

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3.32"
